syntax = "proto3";
package api;

import "google/protobuf/timestamp.proto";

service ApiInfoService {
  rpc GetApiInfo(GetApiInfoRequest) returns (GetApiInfoResponse) {}
}

message GetApiInfoRequest {}

message GetApiInfoResponse {
  ApiInfo api_info = 1;
}

message ApiInfo {
  uint32 version = 1;
  string commit = 2;
  google.protobuf.Timestamp build_time = 3;
  google.protobuf.Timestamp current_time = 4;
}
