syntax = "proto3";
package api.v1;

import "google/protobuf/empty.proto";
import "api/v1/user.proto";

service AuthService {
  rpc GetNonce(google.protobuf.Empty) returns (GetNonceResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  // rpc DeleteAccount(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message GetNonceResponse {
  string nonce = 1;
}

message LoginRequest {
  string id_token = 1;
  string nonce = 2;
}

message LoginResponse {
  LoginStatus status = 1;
  oneof details {
    LoginResponseNewUser new_user = 2;
    LoginResponseExistingUser existing_user = 3;
  }
}


enum LoginStatus {
  LOGIN_STATUS_UNSPECIFIED = 0;
  LOGIN_STATUS_NEW_USER = 1;
  LOGIN_STATUS_EXISTING_USER = 2;
}

message LoginResponseNewUser {
  string user_id = 1;
  string token = 2;
}

message LoginResponseExistingUser {
  string user_id = 1;
  string token = 2;
}


message RegisterRequest {
  RegisterData data = 1;
}

message RegisterData {
  School school = 2;
  uint32 class_of = 3;
  string bio = 4;
  repeated CampusAvailability campus_availability = 5;
  repeated VirtualAvailability virtual_availability = 6;
  repeated string topics = 7;
}

message RegisterResponse {
  string user_id = 1;
}
